# E-Sabatina

./: .gitignore  CMakeLists.txt  LICENSE  README.md  automatiza_arsae.nimble  pyproject.toml  requirements.txt
docs/: DOC_01: My general backend implementation (overall guide and description)  DOC_02: Adressing ML and AI chunks of code with Python (labor division)  DOC_03: Replacing Nim with C++ and effectively implementing a tokenizer
src/: automatiza_arsae.nim
src/automatiza_arsae/: submodule.nim
src/cpp/: main.cpp
src/python/: master_python_embed.py
src/python/modules/classes/controllers/: PDFParsing.py
src/python/modules/classes/gui/templates/: generic_page_template.py  generic_window_template.py
src/python/services/: BERTimbauService.py  PDFParsing.py
tests/: test1.nim
