[project]
name = "automatiza-arsae"
version = "0.1.0"
description = "An automation project made with Python and Nim."
authors = [{ name = "Túlio Ferreira Horta", email = "tulio.horta@arsae.mg.gov.br, tuliofh01@gmail.com"}]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["nimporter", "flet"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

