[project]
name = "e-sabatina"
version = "0.1.0"
description = "A NLP conceptual automation project."
authors = [{ 
	name = "Túlio Ferreira Horta", 
	email = "tuliofh01@gmail.com"
}]
license = {
	text = "Apache 2.0"
}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pybind11 (>=3.0.1,<4.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
